fixed padding issue on tablet view

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -199,7 +199,6 @@ main {
         justify-content: center;
         align-items: center;
         width: 30%;
-        padding-top: 7%;
     }
     .pet-card {
         display: flex;
